[package]
name = "mfgj2023"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies]
bevy = { version ="0.11.0", features = ["dynamic_linking"]} # TODO: remove in release
#bevy = "0.11.0"

